# soFileCreation

./: build.gradle  settings.gradle
.github/workflows/: build.yml
android/: CMakeLists.txt
src/: androidtesting.cpp  androidtesting.h
